# firegurad

./: .dockerignore  .env.example  .gitignore  API_QUICK_START.md  API_README.md  DOCKER.md  Dockerfile  HISTORICAL_DATA_FIX_SUMMARY.md  KEY.txt  QUICK_SETUP_GUIDE.md  README.md  docker-compose.yml  example_worker_usage.py  index.html  locations_example.json  manual_test_historical.py  new key pair.txt  nginx.conf  pyproject.toml
.github/ISSUE_TEMPLATE/: architecture-documentation.md  backlog-user-stories.md
.github/workflows/: CI_CD.yml  ci.yml  deploy.yml
docs/: architecture.md  historical_data.md
examples/: README.md  met_api_example.py  notification_example.py  scheduled_harvester_example.py  subscriber_example.py
src/frcm/: __init__.py  api.py  run_api.py
src/frcm/api/: __init__.py  app.py  auth.py  config.py  prediction.py  server.py
src/frcm/database/: __init__.py  db.py
src/frcm/fireriskmodel/: compute_cached.py
src/frcm/met_integration/: README.md  __init__.py  client.py  frost_client.py  transform.py
src/frcm/notification/: __init__.py  models.py  service.py  test_notification.py  test_service.py
src/frcm/worker/: README.md  SCHEDULED_HARVESTER.md  __init__.py  __main__.py  harvester.py  locations.py  scheduled_harvester.py  test_worker.py
tests/: __init__.py  test_api.py  test_compute_cached.py  test_database.py  test_frcm.py  test_scheduled_harvester.py
tests/met_integration/: __init__.py  test_client.py  test_frost_client.py  test_transform.py
